# xArm6-ROS

./: README.md
catkin_ws/src/Messages/: CMakeLists.txt  package.xml
catkin_ws/src/Messages/msg/: JointStates.msg
catkin_ws/src/xarm_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/xarm_bringup/launch/: unity_control.launch  unity_control_broken.launch
catkin_ws/src/xarm_bringup/scripts/: clear_err.py  joint_state_publisher.py  reset.py  setpoint_sub.py
catkin_ws/src/xarm_sdk/cxx/: ReadMe.md
catkin_ws/src/xarm_sdk/cxx/doc/: xarm_cplus_api.md
